feat: add new errors
